--- a/style.css
+++ b/style.css
@@ -218,9 +218,63 @@ p {
 .major__list__detail {
   font-size: var(--font-micro);
   font-weight: var(--weight-semi-bold);
-  color: var(--color-dark-grey);
+  color: var(--color-light-grey);
 }
 .major__list__time {
   font-size: var(--font-micro);
+  font-weight: var(--weight-regular);
   color: var(--color-grey);
+}
+
+/* Skills */
+.skillset {
+  display: flex;
+  margin: 20px 0;
+  color: var(--color-light-white);
+}
+.skillset__title {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-brown);
+}
+.skillset__left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+
+.skill {
+  margin-bottom: 20px;
+}
+
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
+}
+.skill__value {
+  height: 3px;
+  background-color: var(--color-brown);
+}
+.skillset__right {
+  flex-basis: 40%;
+  background-color: var(--color-grey);
+}
+
+.tools {
+  background-color: var(--color-grey);
+}
+
+.etc {
+  background-color: var(--color-light-grey);
+}
+
+.tools,
+.etc {
+  padding: 20px;
 }
