--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ p {
   margin: auto;
 }
 
+.section__container {
+  max-width: 1200px;
+  margin: auto;
+}
 /* About */
 .about__majors {
   display: flex;
@@ -371,4 +375,32 @@ p {
   margin-left: -12px;
   margin-top: 8px;
   background-color: var(--color-light-white);
+}
+
+/* Contact */
+#contact {
+  background-color: var(--color-light-brown);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+  transition: all var(--animation-duration) ease-in;
+}
+.contact__links i {
+  color: var(--color-dark-brown);
+}
+.contact__links i:hover {
+  transform: scale(1.1);
+  color: var(--color-brown);
 }
