--- a/style.css
+++ b/style.css
@@ -129,6 +129,15 @@ p {
   color: var(--color-white);
 }
 
+.navbar__toggle-btn {
+  position: absolute;
+  top: 16px;
+  right: 32px;
+  color: var(--color-brown);
+  font-size: var(--font-regular);
+  display: none;
+}
+
 /* Home */
 #home {
   text-align: center;
@@ -169,13 +178,13 @@ p {
 /* About */
 .about__majors {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 80px 0;
 }
 .major {
-  margin: auto;
-  width: 30%;
-  height: 350px;
+  margin: 20px;
+  width: 400px;
+  height: 400px;
   padding: 10px;
   background-color: var(--color-background);
   color: var(--color-brown);
@@ -403,4 +412,41 @@ p {
 .contact__links i:hover {
   transform: scale(1.1);
   color: var(--color-brown);
+}
+
+/* For below 768px screen width*/
+@media screen and (max-width: 768px) {
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .about__majors {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .major {
+    margin-bottom: 38px;
+    width: 400px;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
 }
