--- a/style.css
+++ b/style.css
@@ -342,6 +342,13 @@ p {
   flex-wrap: wrap;
   justify-content: center;
   padding: 30px;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -353,6 +360,10 @@ p {
   height: 250px;
   margin: 2px;
   background-color: var(--color-background);
+}
+
+.project.invisible {
+  display: none;
 }
 
 .project__img {
