--- a/style.css
+++ b/style.css
@@ -126,14 +126,12 @@ p {
   margin: 0 10px;
   padding: 5px 10px;
   cursor: pointer;
+  border: 2px solid transparent;
   border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
-  border: 1px solid var(--color-brown);
-}
-
 .navbar__menu__item:hover {
+  border: 2px solid var(--color-brown);
   background-color: var(--color-dark-brown);
   color: var(--color-white);
 }
@@ -310,13 +308,13 @@ p {
   border-radius: var(--size-border-radius);
   color: var(--color-brown);
 }
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-dark-brown);
   color: white;
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
