--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   /* Font size */
   --font-large: 48px;
   --font-medium: 28px;
-  --font-regular: 16px;
+  --font-regular: 20px;
   --font-small: 16px;
   --font-micro: 14px;
 
@@ -187,7 +187,17 @@ p {
   max-width: 1200px;
   margin: auto;
 }
+
+.text--highlight {
+  font-weight: var(--weight-bold);
+  color: var(--color-dark-brown);
+}
+
 /* About */
+
+.logo {
+  font-size: var(--font-regular);
+}
 .about__majors {
   display: flex;
   justify-content: center;
@@ -196,7 +206,8 @@ p {
 .major {
   margin: 20px;
   width: 400px;
-  height: 400px;
+  height: 100%;
+  min-height: 400px;
   padding: 10px;
   background-color: var(--color-background);
   color: var(--color-brown);
